<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!-- ic_menu_default is just a circle filled black color
        -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/scheduleAct"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/mapsActivity"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_maps" />
    </group>
</menu>
