<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="io.github.cs102g1j.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="io.github.cs102g1j.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery"/>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="io.github.cs102g1j.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow"/>

    <fragment
        android:id="@+id/nav_schedule"
        android:name="io.github.cs102g1j.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule"/>
    <activity
        android:id="@+id/mapsActivity"
        android:name="io.github.cs102g1j.nav.MapsActivity"
        android:label="activity_maps"
        tools:layout="@layout/activity_maps" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="io.github.cs102g1j.ui.settings.SettingsFragment"
        android:label="Settings" />
    <!--Global action-->
    <action android:id="@+id/open_settings_fragment"
        app:destination="@id/settingsFragment"/>
</navigation>